# conway

./: Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
backend/: automaton.py  cell.py
backend/tests/: test_automaton.py  test_cell.py
frontend/: app.py  config.py  plot.py
